log
mi., 26 de mar. de 2025 20:52:18: 
 tests:  0|6
total_score: 0/70
25021aa
mi., 26 de mar. de 2025 20:56:43: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6064bb5
mi., 26 de mar. de 2025 20:58:24: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
561b08c
mi., 26 de mar. de 2025 21:02:18: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
27137e0
mi., 26 de mar. de 2025 21:03:14: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
5dd0f08
mi., 26 de mar. de 2025 21:04:32: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
3aea5b0
mi., 26 de mar. de 2025 21:06:11: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
591e5ab
mi., 26 de mar. de 2025 21:08:12: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5841e56
mi., 26 de mar. de 2025 21:16:20: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 25/70
926ed61
mi., 26 de mar. de 2025 21:16:59: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
d45d76a
mi., 26 de mar. de 2025 21:18:01: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7de52fe
mi., 26 de mar. de 2025 21:23:09: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
0cf41d0
mi., 26 de mar. de 2025 21:26:53: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
aea56c8
mi., 26 de mar. de 2025 21:28:13: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
16ccbb7
mi., 26 de mar. de 2025 21:30:14: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2f378e9
vi., 28 de mar. de 2025 18:17:48: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
41923db
vi., 28 de mar. de 2025 18:18:29: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6353de0
vi., 28 de mar. de 2025 18:19:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4dc349d
vi., 28 de mar. de 2025 18:20:12: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
bbebcaa
vi., 28 de mar. de 2025 18:26:09: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e0e78d3
vi., 28 de mar. de 2025 18:28:30: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
31b2628
vi., 28 de mar. de 2025 18:32:01: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
5be517c
vi., 28 de mar. de 2025 18:33:15: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
b8c352f
vi., 28 de mar. de 2025 18:36:07: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4ae3861
vi., 28 de mar. de 2025 18:40:35: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ba4d474
vi., 28 de mar. de 2025 18:47:00: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
510fdbb
vi., 28 de mar. de 2025 19:08:19: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:69:35: error: 'return' with a value, in function returning void [-Werror]
     if(list->head == NULL) return NULL;
                                   ^~~~
list.c:66:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7725143
vi., 28 de mar. de 2025 19:08:48: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c6ce928
vi., 28 de mar. de 2025 19:12:06: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
f98509e
vi., 28 de mar. de 2025 19:16:56: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:76:29: error: 'return' with a value, in function returning void [-Werror]
     return list->head->prev = newNode;
            ~~~~~~~~~~~~~~~~~^~~~~~~~~
list.c:66:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c6f49ff
vi., 28 de mar. de 2025 19:17:09: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:76:22: error: 'return' with a value, in function returning void [-Werror]
     return list->head->prev;
            ~~~~~~~~~~^~~~~~
list.c:66:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e83b3ac
vi., 28 de mar. de 2025 19:17:42: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:76:22: error: 'return' with a value, in function returning void [-Werror]
     return list->head->data;
            ~~~~~~~~~~^~~~~~
list.c:66:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fa46a77
vi., 28 de mar. de 2025 19:18:10: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:76:16: error: 'return' with a value, in function returning void [-Werror]
     return list->head;
            ~~~~^~~~~~
list.c:66:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
78d99af
vi., 28 de mar. de 2025 19:22:06: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:76:16: error: 'return' with a value, in function returning void [-Werror]
     return list->head;
            ~~~~^~~~~~
list.c:66:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
29e4515
vi., 28 de mar. de 2025 19:22:16: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a3d3028
vi., 28 de mar. de 2025 19:24:29: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
6244a86
vi., 28 de mar. de 2025 19:25:21: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:73:22: error: 'return' with a value, in function returning void [-Werror]
     return list->head->prev;
            ~~~~~~~~~~^~~~~~
list.c:66:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
acc2942
vi., 28 de mar. de 2025 19:26:01: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
dad6706
vi., 28 de mar. de 2025 19:29:28: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
46d006e
vi., 28 de mar. de 2025 19:39:50: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
31789fd
vi., 28 de mar. de 2025 19:41:16: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
1a5f212
vi., 28 de mar. de 2025 19:44:30: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
11609e3
vi., 28 de mar. de 2025 20:51:22: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
05a3df8
vi., 28 de mar. de 2025 21:02:26: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
1f4295c
vi., 28 de mar. de 2025 21:03:33: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
eeaf0a2
vi., 28 de mar. de 2025 21:05:10: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
fdb2d67
vi., 28 de mar. de 2025 21:06:37: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
8e7123e
vi., 28 de mar. de 2025 21:11:45: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
d9d1157
